--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 　私の名前は<ruby>水野若菜<rt>みずのわかな</rt></ruby>です。
-　生年月日：2005年5月９日
+　<br>生年月日：2005年5月９日
+ <br>出身地：埼玉県蕨市
+ <br>所属：早稲田大学　人間科学部　人間環境科学科
 </body>
 </html>
