--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
 <title>自己紹介</title>
 </head>
 <body>
-　私の名前は<ruby>水野若菜<rt>みずのわかな</rt></ruby>です。
-　<br>生年月日：2005年5月９日
- <br>出身地：埼玉県蕨市
- <br>所属：早稲田大学　人間科学部　人間環境科学科
+<ruby>水野若菜<rt>みずのわかな</rt></ruby>
+　<br>①生年月日：2004年5月９日
+ <br>②出身地：埼玉県蕨市
+ <br>③所属：早稲田大学人間科学部人間環境科学科 
+ <br>④趣味：ショッピング、アニメ鑑賞
+ <br>⑤学生時代の部活・好きなスポーツ：
+ <br>　小学生のクラブから高校生の部活までバレーボールを続けていました。ポジションはセンターで、ブロックが得意でした。特に良い成績を残したわけではないですが、今でも高校のバレーボール部のメンバーと集まり、時々バレーボールをしています。
+ <br> また、最近では好きなアニメの影響で、サッカー鑑賞も好きになりました。
 </body>
 </html>
