--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
 <title>自己紹介</title>
 </head>
 <body>
+<span style=“background:【#FFFFEE】;”>
 <ruby>水野若菜<rt>みずのわかな</rt></ruby>
-　<br>①生年月日：2004年5月９日
+　<br><br>①生年月日：2004年5月９日
  <br>②出身地：埼玉県蕨市
  <br>③所属：早稲田大学人間科学部人間環境科学科 
  <br>④趣味：ショッピング、アニメ鑑賞
  <br>⑤学生時代の部活・好きなスポーツ：
  <br>　小学生のクラブから高校生の部活までバレーボールを続けていました。ポジションはセンターで、ブロックが得意でした。特に良い成績を残したわけではないですが、今でも高校のバレーボール部のメンバーと集まり、時々バレーボールをしています。
- <br> また、最近では好きなアニメの影響で、サッカー鑑賞も好きになりました。
+ <br> 　また、最近では好きなアニメの影響で、サッカー鑑賞も好きになりました。
+ <br>⑥好きなアニメ：「HUNTER×HUNTER」　「SPY×FAMILY」　「ホリミヤ」　「ブルーロック」
 </body>
 </html>
