--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <meta charset="utf-8">
 <title>自己紹介</title>
 </head>
-<body>
-<span style=“background:【#FFFFEE】;”>
+<body style="background-color:#FFFFEE;">
 <ruby>水野若菜<rt>みずのわかな</rt></ruby>
 　<br><br>①生年月日：2004年5月９日
  <br>②出身地：埼玉県蕨市
