--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <title>自己紹介</title>
 </head>
 <body style="background-color:#FFFFEE;">
+body {
+  font-family: 'Hiragino Kaku Gothic Pro', 'Meiryo', sans-serif;
+}
 <ruby>水野若菜<rt>みずのわかな</rt></ruby>
 　<br><br>①生年月日：2004年5月９日
  <br>②出身地：埼玉県蕨市
