--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
 <title>自己紹介</title>
 </head>
 <body style="background-color:#FFFFEE;">
-body {
-  font-family: 'Hiragino Kaku Gothic Pro', 'Meiryo', sans-serif;
-}
+<span style=“font-family:sans-serif;”>
 <ruby>水野若菜<rt>みずのわかな</rt></ruby>
 　<br><br>①生年月日：2004年5月９日
  <br>②出身地：埼玉県蕨市
@@ -17,5 +15,6 @@ body {
  <br>　小学生のクラブから高校生の部活までバレーボールを続けていました。ポジションはセンターで、ブロックが得意でした。特に良い成績を残したわけではないですが、今でも高校のバレーボール部のメンバーと集まり、時々バレーボールをしています。
  <br> 　また、最近では好きなアニメの影響で、サッカー鑑賞も好きになりました。
  <br>⑥好きなアニメ：「HUNTER×HUNTER」　「SPY×FAMILY」　「ホリミヤ」　「ブルーロック」
+</span>
 </body>
 </html>
