--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>自己紹介</title>
 </head>
 <body style="background-color:#FFFFEE;">
-<span style=“font-family:sans-serif;”>
+<span style=“font-size:180%”>
 <ruby>水野若菜<rt>みずのわかな</rt></ruby>
 　<br><br>①生年月日：2004年5月９日
  <br>②出身地：埼玉県蕨市
@@ -15,6 +15,9 @@
  <br>　小学生のクラブから高校生の部活までバレーボールを続けていました。ポジションはセンターで、ブロックが得意でした。特に良い成績を残したわけではないですが、今でも高校のバレーボール部のメンバーと集まり、時々バレーボールをしています。
  <br> 　また、最近では好きなアニメの影響で、サッカー鑑賞も好きになりました。
  <br>⑥好きなアニメ：「HUNTER×HUNTER」　「SPY×FAMILY」　「ホリミヤ」　「ブルーロック」
+ <br>⑦将来の夢：私の将来の夢は、テレビ局で番組制作に関わることです。きっかけは、幼い頃から「イッテQ」が大好きで、自分も番組を作る側になりたいと思ったことです。
+ <br>⑧好きな食べ物：ステーキ、アイスクリーム、コーラです。コーラは冷蔵庫に必ず常備してあるほど、毎日飲んでいます。
+
 </span>
 </body>
 </html>
