--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body style="background-color:#FFFFEE;">
 <span style=“font-size:180%”>
-<ruby>水野若菜<rt>みずのわかな</rt></ruby>
+<ruby>水野若菜<rt>みずのわかな</rt></ruby></span>
 　<br><br>①生年月日：2004年5月９日
  <br>②出身地：埼玉県蕨市
  <br>③所属：早稲田大学人間科学部人間環境科学科 
